main/default/objects/SubCategory__c/SubCategory__c.object-meta.xml
<CustomObject>
    <description>Sub Category</description>
    <label>SubCategory</label>
    <nameField>
        <label>SubCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubCategories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>