main/default/objects/SubCategory__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category</description>
    <inlineHelpText>Category</inlineHelpText>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>SubCategories</relationshipLabel>
    <relationshipName>SubCategories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>