main/default/objects/SubCategory__c/fields/Forecast_Savings__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Savings__c</fullName>
    <description>Forecast Savings</description>
    <inlineHelpText>Forecast Savings</inlineHelpText>
    <label>Forecast Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>