main/default/objects/SubCategory__c/fields/Forecast_Spent__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Spent__c</fullName>
    <description>Forecast Spent</description>
    <label>Forecast Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>