main/default/objects/SubCategory__c/fields/Realized_Spent__c.field-meta.xml
<CustomField>
    <fullName>Realized_Spent__c</fullName>
    <description>Realized Spent</description>
    <inlineHelpText>Realized Spent</inlineHelpText>
    <label>Realized Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>