main/default/objects/SubCategory__c/fields/SubCategoryNo__c.field-meta.xml
<CustomField>
    <fullName>SubCategoryNo__c</fullName>
    <description>Sub Category Number</description>
    <displayFormat>SCAT-{000000}</displayFormat>
    <inlineHelpText>Sub Category Number</inlineHelpText>
    <label>SubCategoryNo</label>
    <type>AutoNumber</type>
</CustomField>